[gd_scene load_steps=10 format=2]

[ext_resource path="res://ParallaxBackground.tscn" type="PackedScene" id=1]
[ext_resource path="res://Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://PlayerInput.gd" type="Script" id=3]
[ext_resource path="res://Main.gd" type="Script" id=4]
[ext_resource path="res://assets/moonFull.png" type="Texture" id=5]
[ext_resource path="res://assets/shield.png" type="Texture" id=6]
[ext_resource path="res://new_dynamicfont.tres" type="DynamicFont" id=7]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, -8, 64, 0, 0, 0, 0, 1016, 64, 0, 0, 0, 0, 1016, 280, 0, 0, 0, 0, -8, 280, 0, 0, 0, 0, -8, 64 )
}

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 584, 10 )

[node name="Main" type="Node2D"]
script = ExtResource( 4 )
__meta__ = {
"_edit_vertical_guides_": [  ]
}

[node name="Margin" type="MarginContainer" parent="."]
margin_right = 1024.0
margin_bottom = 120.0
rect_min_size = Vector2( 1024, 120 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Container" type="HBoxContainer" parent="Margin"]
margin_right = 1024.0
margin_bottom = 65.0
grow_horizontal = 0
grow_vertical = 0
size_flags_vertical = 0
alignment = 1

[node name="containerHP" type="HBoxContainer" parent="Margin/Container"]
margin_right = 72.0
margin_bottom = 60.0
grow_horizontal = 0
grow_vertical = 0
size_flags_horizontal = 2
size_flags_vertical = 0
alignment = 1

[node name="texture" type="TextureRect" parent="Margin/Container/containerHP"]
margin_right = 50.0
margin_bottom = 60.0
grow_vertical = 2
rect_min_size = Vector2( 50, 60 )
texture = ExtResource( 6 )
expand = true
stretch_mode = 3

[node name="life" type="Label" parent="Margin/Container/containerHP"]
margin_left = 54.0
margin_top = 14.0
margin_right = 72.0
margin_bottom = 45.0
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color = Color( 0.996078, 0.984314, 0.984314, 1 )
text = "0"
align = 1
valign = 1

[node name="containerScore" type="VBoxContainer" parent="Margin/Container"]
margin_left = 911.0
margin_right = 1024.0
margin_bottom = 65.0
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="score" type="Label" parent="Margin/Container/containerScore"]
margin_right = 113.0
margin_bottom = 65.0
size_flags_horizontal = 0
size_flags_vertical = 0
custom_fonts/font = ExtResource( 7 )
text = "Score: 0
"
align = 2
valign = 3

[node name="ParallaxBackground" parent="." instance=ExtResource( 1 )]

[node name="ParallaxSky" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxSky"]
motion_scale = Vector2( 0.1, 0.001 )

[node name="Moon" type="Sprite" parent="ParallaxSky/ParallaxLayer"]
position = Vector2( 557.34, 121.884 )
texture = ExtResource( 5 )

[node name="Player" parent="." groups=[
"Player",
] instance=ExtResource( 2 )]
position = Vector2( 140, 572 )
scale = Vector2( 0.4, 0.4 )
script = ExtResource( 3 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 508.944, 304.458 )

[node name="Tween" type="Tween" parent="."]

[node name="BomberTimer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="KamikazeTimer" type="Timer" parent="."]
wait_time = 2.5
autostart = true

[node name="BomberPath" type="Path2D" parent="."]
curve = SubResource( 1 )

[node name="spawn" type="PathFollow2D" parent="BomberPath"]
position = Vector2( -8, 64 )
rotation = -1.94445e-06

[node name="Ground" type="StaticBody2D" parent="."]
collision_layer = 2
collision_mask = 4

[node name="collision" type="CollisionShape2D" parent="Ground"]
position = Vector2( 524, 608 )
shape = SubResource( 2 )

[node name="ScoreTimer" type="Timer" parent="."]
autostart = true

[node name="StartPoint" type="Position2D" parent="."]
position = Vector2( 140, 572 )

[node name="Menu" type="MarginContainer" parent="."]
margin_right = 340.0
margin_bottom = 600.0
rect_min_size = Vector2( 1024, 600 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MenuContainer" type="VBoxContainer" parent="Menu"]
margin_left = 332.0
margin_right = 692.0
margin_bottom = 694.0
rect_min_size = Vector2( 360, 600 )
size_flags_horizontal = 4
alignment = 1

[node name="Label" type="Label" parent="Menu/MenuContainer"]
margin_top = 267.0
margin_right = 360.0
margin_bottom = 332.0
grow_horizontal = 2
custom_fonts/font = ExtResource( 7 )
text = "Tanky McTank
"
align = 1

[node name="Start" type="Button" parent="Menu/MenuContainer"]
margin_top = 336.0
margin_right = 360.0
margin_bottom = 386.0
rect_min_size = Vector2( 150, 50 )
custom_fonts/font = ExtResource( 7 )
text = "Start"

[node name="Credits" type="Button" parent="Menu/MenuContainer"]
margin_top = 390.0
margin_right = 360.0
margin_bottom = 427.0
custom_fonts/font = ExtResource( 7 )
text = "Credits"

[node name="Credits" type="VBoxContainer" parent="Menu"]
margin_left = 325.0
margin_right = 698.0
margin_bottom = 600.0
rect_min_size = Vector2( 360, 600 )
size_flags_horizontal = 4
size_flags_vertical = 0
alignment = 1

[node name="Credits" type="Label" parent="Menu/Credits"]
margin_top = 26.0
margin_right = 373.0
margin_bottom = 533.0
grow_horizontal = 2
custom_fonts/font = ExtResource( 7 )
text = "
Credits:
Art from Kenney
 www.kenney.nl

SFX from freesound.org

 and

Font Militaria from
http://www.woodcutter.es/



"
align = 1

[node name="Back" type="Button" parent="Menu/Credits"]
margin_top = 537.0
margin_right = 373.0
margin_bottom = 574.0
custom_fonts/font = ExtResource( 7 )
text = "Back"
[connection signal="timeout" from="BomberTimer" to="." method="_on_BomberTimer_timeout"]
[connection signal="timeout" from="KamikazeTimer" to="." method="_on_KamikazeTimer_timeout"]
[connection signal="timeout" from="ScoreTimer" to="." method="_on_ScoreTimer_timeout"]
[connection signal="pressed" from="Menu/MenuContainer/Start" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="Menu/MenuContainer/Credits" to="." method="_on_Credits_pressed"]
[connection signal="pressed" from="Menu/Credits/Back" to="." method="_on_Back_pressed"]
